# datasette-proxy-url

./: README.md  pyproject.toml
.github/workflows/: test.yml
datasette_proxy_url/: __init__.py
tests/: test_proxy_url.py
